1. 텍스트 입력 도구 활성화시 원하는 위치에 생기도록 수정

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -59,7 +59,7 @@
     </div>
     <script>
         function proceedToConsent() {
-            window.location.href = "/consent?selected=diabetes,hypertension,cardiovascular";
+            window.location.href = "/consent";
         }
     </script>
 </body>
